# purchases

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/purchases/: __init__.py  cli.py  config.py  db.py  exporter.py
src/purchases/importers/: __init__.py  amazon.py
