[project]
name = "purchases"
version = "0.1.0"
description = "Purchase history tracking - SQLite database with Amazon import and Obsidian export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
purchases = "purchases.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/purchases"]
